Updated with version: 3.8.5 changes

--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,10 @@
 
 UNRELEASED:
 
+3.8.5:
+- Updated translations.
+- Fixed text display issue on AdBlock menu. (#209)
+
 3.8.4:
 - Updated translations.
 - Updated 'bandaids' processing to help block ads on certain web sites. (#205)
