Updated with version: 3.8.6 changes

--- a/_locales/bg/messages.json
+++ b/_locales/bg/messages.json
@@ -1452,11 +1452,11 @@
     "description":"Menu entry to open the resource list page"
   },
   "new_resourcelist_explanation_win":{
-    "message":"За показването им щракнете с десен в страницата, изберете „Инспектирай“ (Ctrl+Shift+I) и отворете раздел „AdBlock“.",
+    "message":"Щракнете с десен в страницата, изберете „Инспектирай“ (Ctrl+Shift+I) и отворете раздел „AdBlock“.",
     "description":"Message explaining how to access the resource list page on AdBlock 3.0+"
   },
   "new_resourcelist_explanation_osx":{
-    "message":"За показването им щракнете с десен в страницата, изберете „Инспектирай“ (Option+Cmd+I) и отворете раздел „AdBlock“.",
+    "message":"Щракнете с десен в страницата, изберете „Инспектирай“ (⌥+⌘+I) и отворете раздел „AdBlock“.",
     "description":"Message explaining how to access the resource list page on AdBlock 3.0+"
   },
   "noresourcessend2":{
@@ -1590,10 +1590,6 @@
   "adreport_missing_screenshot":{
     "message":"Забравихте да прикачите снимка на екрана! Няма да сме в състояние да ви помогнем, без да видим докладваната реклама.",
     "description":"Error message shown when the user doesn't attach a screenshot to an ad report."
-  },
-  "adreport_response_success":{
-    "message":"Готово! Ще се свържем с вас скоро, най-вероятно до ден или два, ако следват почивни. Проверете междувременно за писмо от AdBlock с препратка към вашия билет в помощния сайт, за да следите случая през е-поща, ако така предпочитате!",
-    "description":"Shown when a ticket has been sumbitted to AdBlock's support site successfully."
   },
   "adreport_response_invalid_file":{
     "message":"Файлът не е изображение. Моля, качете .png, .gif или .jpg.",
