--- a/_locales/en_GB/messages.json
+++ b/_locales/en_GB/messages.json
@@ -1592,7 +1592,7 @@
     "description":"Error message shown when the user doesn't attach a screenshot to an ad report."
   },
   "adreport_response_success":{
-    "message":"All set!  We'll be in touch soon, most likely within a day, two if it's a holiday. In the meantime, look for an email from AdBlock. You'll find a link to your ticket on our help site there. If you prefer to follow along by email, you can do that, too!",
+    "message":"All set! We'll be in touch as soon as we can. In the meantime, look for an email from AdBlock. You'll find a link to your ticket on our help site there, along with some self-help suggestions if we can't get back to you right away.",
     "description":"Shown when a ticket has been sumbitted to AdBlock's support site successfully."
   },
   "adreport_response_invalid_file":{
