Updated with version: 3.8.7 changes

--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -252,7 +252,7 @@
     "description":"Checkbox on the 'General' tab of the Options page. 'Content Blocking' is the name of a different way of blocking resources introduced in Safari 9."
   },
   "debuginlogoption":{
-    "message":"Mostrar datos debug en la consola (lo que ralentiza AdBlock)",
+    "message":"Mostrar datos debug en la consola (esto ralentiza AdBlock)",
     "description":"Checkbox on the 'General' tab of the Options page"
   },
   "datacollectionoption":{
@@ -360,7 +360,7 @@
     "description":"Title of the filter list tab"
   },
   "filterlistlink":{
-    "message":"No te sucribas a más de los que necesitas, ¡cada uno ralentiza un poquito tu navegación! Los créditos y otras listas las puedes encontrar <a>aquí<\/a>.",
+    "message":"No te sucribas a más de los que necesites, ¡cada uno ralentiza un poquito tu navegación! Los créditos y otras listas los puedes encontrar <a>aquí<\/a>.",
     "description":"Explanation of the filter lists"
   },
   "updatenowmessage2":{
@@ -1590,6 +1590,10 @@
   "adreport_missing_screenshot":{
     "message":"¡Has olvidado adjuntar una captura de pantalla! No te podemos ayudar si no vemos el\/los anuncio(s) que estás notificando.",
     "description":"Error message shown when the user doesn't attach a screenshot to an ad report."
+  },
+  "adreport_response_success":{
+    "message":"¡Todo listo! Nos pondremos en contacto contigo tan pronto como podamos. Mientras tanto, revisa que hayas recibido un email de AdBlock. Encontrarás un enlace a tu caso en nuestra web de ayuda, así como algunas sugerencias y consejos para los casos de que no podamos ayudarte.",
+    "description":"Shown when a ticket has been sumbitted to AdBlock's support site successfully."
   },
   "adreport_response_invalid_file":{
     "message":"Eso no es un archivo de imagen. Sube un archivo .png, .gif o .jpg.",
