--- a/_locales/pt_BR/messages.json
+++ b/_locales/pt_BR/messages.json
@@ -1591,6 +1591,10 @@
     "message":"Você esqueceu de anexar uma captura de tela! Nós não podemos ajudá-lo sem ver o(s) anúncio(s) que você está relatando.",
     "description":"Error message shown when the user doesn't attach a screenshot to an ad report."
   },
+  "adreport_response_success":{
+    "message":"Tudo pronto! Logo que possível, entraremos em contato. Nesse período, procure por um e-mail do AdBlock. Você encontrará um link para seu tíquete em nosso site de ajuda, juntamente com algumas sugestões de auto-ajuda, caso não possamos retorná-lo imediatamente.",
+    "description":"Shown when a ticket has been sumbitted to AdBlock's support site successfully."
+  },
   "adreport_response_invalid_file":{
     "message":"Isso não é um arquivo de imagem. Por favor, faça o upload de um arquivo .png, .gif, ou .jpg.",
     "description":"Error message shown when the user uploads an invalid file type."
