--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -392,7 +392,7 @@
     "description":"A filter list. \"Adblock\" is written with a lowercase B in this string as it refers to ad blocking extensions in general, not just AdBlock specifically."
   },
   "filteracceptable_ads":{
-    "message":"Приемлемыя реклама",
+    "message":"Приемлемая реклама",
     "description":"A filter list"
   },
   "filteradblock_custom":{
@@ -1590,6 +1590,10 @@
   "adreport_missing_screenshot":{
     "message":"Вы забыли приложить скриншот! Мы не можем помочь Вам не видя рекламу, о которой Вы сообщаете.",
     "description":"Error message shown when the user doesn't attach a screenshot to an ad report."
+  },
+  "adreport_response_success":{
+    "message":"Все готово! Мы свяжемся с Вами, как только сможем. Тем временем поищите письмо от AdBlock. Там Вы найдете ссылку на Вашу заявку на нашем сайте помощи, а также некоторые рекомендации для самостоятельного решения проблемы, на случай, если мы не сможем помочь Вам сразу.",
+    "description":"Shown when a ticket has been sumbitted to AdBlock's support site successfully."
   },
   "adreport_response_invalid_file":{
     "message":"Это не файл изображения. Пожалуйста, загрузите файл .png, .gif или .jpg.",
