--- a/_locales/uk/messages.json
+++ b/_locales/uk/messages.json
@@ -60,7 +60,7 @@
     "description":"Blacklister slider page title"
   },
   "blacklisteroptions1":{
-    "message":"Які ознаки на вашу думку найкраще характеризуватимуть цю рекламу?",
+    "message":"Як Ви думаєте, чи буде правильним бачити цю рекламу при кожному відвідуванні цієї сторінки?",
     "description":"Blacklister attribute choosing page message"
   },
   "blacklisternotsure":{
@@ -72,7 +72,7 @@
     "description":"Blacklister attribute choosing page message"
   },
   "blacklisteroptionstitle":{
-    "message":"Останній крок: що робить це рекламою?",
+    "message":"Останній крок: що робити з цією рекламою?",
     "description":"Blacklister options page title"
   },
   "blacklisternofilter":{
@@ -84,7 +84,7 @@
     "description":"Text if the user wants to manually edit a filter. 'OK' is the standard javascript popup button text."
   },
   "blacklistereditinvalid1":{
-    "message":"Помилка введення фільтру: $exception$",
+    "message":"Неприпустимий фільтр: $exception$",
     "description":"Messagebox if the manually edited filter is invalid. Error messages are not translated.",
     "placeholders":{
       "exception":{
@@ -112,7 +112,7 @@
     }
   },
   "blacklistersinglematch":{
-    "message":"Під фільтр потрапляє <b>1<\/b> елемент на поточній сторінці.",
+    "message":"Під фільтр потрапляє <b>1<\/b> елемент на цій сторінці.",
     "description":"Tells the user only one match was found"
   },
   "blacklistermatches":{
@@ -168,7 +168,7 @@
     "description":"Message displayed when the whitelister dialog will whitelist part of an entire website, for example '*.google.com\/reader\/*'.  The URL will appear on the next line."
   },
   "you_can_slide_to_change":{
-    "message":"Перетягніть, щоб визначити, чого саме не чіпатиме AdBlock.",
+    "message":"Ви можете переміститись нижче, щоб змінити саме ті сторінки, на яких AdBlock не буде працювати.",
     "description":"Instructions for how to use the whitelister slider controls. Sometimes only one slider will show, and sometimes two will show, and if possible the text should handle both cases."
   },
   "whitelistertitle2":{
@@ -232,7 +232,7 @@
     "description":"A tab on the options page"
   },
   "generaloptions":{
-    "message":"Основні настройки",
+    "message":"Основні налаштування",
     "description":"Title of first tab page"
   },
   "betalabel":{
@@ -240,7 +240,7 @@
     "description":"Label for beta features in AdBlock Options"
   },
   "showcontextmenus2":{
-    "message":"Керувати AdBlock за допомогою контекстного меню",
+    "message":"Додати елементи в меню правої кнопки миші",
     "description":"Checkbox on the 'General' tab of the Options page"
   },
   "disableyoutubestreamingads":{
