--- a/_locales/vi/messages.json
+++ b/_locales/vi/messages.json
@@ -1591,6 +1591,10 @@
     "message":"Bạn quên đính kèm ảnh chụp màn hình rồi! Chúng tôi không thể giúp bạn nếu không thấy (những) quảng cáo mà bạn đang báo cáo.",
     "description":"Error message shown when the user doesn't attach a screenshot to an ad report."
   },
+  "adreport_response_success":{
+    "message":"Đã xong! Chúng tôi sẽ liên hệ với bạn sớm nhất có thể. Trong khi đó, hãy chờ đợi một email từ AdBlock. Bạn sẽ thấy một liên kết đến yêu cầu của bạn trên trang trợ giúp của chúng tôi, cùng với một số gợi ý tự trợ giúp nếu chúng tôi không thể liên lạc lại với bạn ngay lập tức.",
+    "description":"Shown when a ticket has been sumbitted to AdBlock's support site successfully."
+  },
   "adreport_response_invalid_file":{
     "message":"Đó không phải tập tin ảnh. Hãy tải lên tập tin .png, .gif, hoặc .jpg.",
     "description":"Error message shown when the user uploads an invalid file type."
