--- a/_locales/bg/messages.json
+++ b/_locales/bg/messages.json
@@ -1591,6 +1591,10 @@
     "message":"Забравихте да прикачите снимка на екрана! Няма да сме в състояние да ви помогнем, без да видим докладваната реклама.",
     "description":"Error message shown when the user doesn't attach a screenshot to an ad report."
   },
+  "adreport_response_success":{
+    "message":"Всичко е настроено! Ще се свържем веднага щом можем. Междувременно проверете за е-писмо от AdBlock. В него ще намерите препратка към вашия билет в нашия помощен сайт заедно с определени предложения за самопомощ, в случай че не успеем да ви отговорим веднага.",
+    "description":"Shown when a ticket has been sumbitted to AdBlock's support site successfully."
+  },
   "adreport_response_invalid_file":{
     "message":"Файлът не е изображение. Моля, качете .png, .gif или .jpg.",
     "description":"Error message shown when the user uploads an invalid file type."
