--- a/_locales/el/messages.json
+++ b/_locales/el/messages.json
@@ -1591,6 +1591,10 @@
     "message":"Ξεχάσατε να επισυνάψετε ένα στιγμιότυπο οθόνης! Δεν μπορούμε να σας βοηθήσουμε χωρίς να δούμε την διαφήμιση που θέλετε να αναφέρετε.",
     "description":"Error message shown when the user doesn't attach a screenshot to an ad report."
   },
+  "adreport_response_success":{
+    "message":"Όλα έτοιμα! Θα είμαστε σε επαφή όσο το δυνατόν πιο σύντομα. Εν τω μεταξύ, αναζητήστε ένα μήνυμα ηλεκτρονικού ταχυδρομείου από το AdBlock. Θα βρείτε ένα σύνδεσμο για το εισιτήριό σας στην ιστοσελίδα μας βοήθειας, μαζί με μερικές προτάσεις αυτοβοήθειας εάν δεν επικοινωνήσουμε μαζί σας αμέσως.",
+    "description":"Shown when a ticket has been sumbitted to AdBlock's support site successfully."
+  },
   "adreport_response_invalid_file":{
     "message":"Αυτό δεν είναι αρχείο εικόνας. Παρακαλούμε αποστείλτε ένα αρχείο .png, .gif ή .jpg.",
     "description":"Error message shown when the user uploads an invalid file type."
