--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -1591,6 +1591,10 @@
     "message":"Hai dimenticato di allegare uno screenshot! Non possiamo aiutarti senza vedere l'annuncio(i) che stai segnalando.",
     "description":"Error message shown when the user doesn't attach a screenshot to an ad report."
   },
+  "adreport_response_success":{
+    "message":"Tutto a posto! La contatteremo il più presto possibile. Nel frattempo, controlli l'arrivo di un'email da AdBlock. Troverà un link con il biglietto per usufruire del nostro sito di aiuto, insieme ad alcuni suggerimenti di auto-aiuto se non possiamo risponderle subito.",
+    "description":"Shown when a ticket has been sumbitted to AdBlock's support site successfully."
+  },
   "adreport_response_invalid_file":{
     "message":"Non è un file immagine. Carica un file .png, .gif o .jpg.",
     "description":"Error message shown when the user uploads an invalid file type."
