--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -1591,6 +1591,10 @@
     "message":"您未粘贴截图! 看不到您所报告的广告，我们无法帮助您。",
     "description":"Error message shown when the user doesn't attach a screenshot to an ad report."
   },
+  "adreport_response_success":{
+    "message":"完成！我们会尽快联系您。同时，请您注意查收来自AdBlock的电子邮件。您可以在邮件中找到您发起的话题的链接，以及一些自助解决的建议，供您在我们未能及时联系您时参考。",
+    "description":"Shown when a ticket has been sumbitted to AdBlock's support site successfully."
+  },
   "adreport_response_invalid_file":{
     "message":"这不是一个图像文件。请上传.png、.gif 或.jpg 文件。",
     "description":"Error message shown when the user uploads an invalid file type."
