--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -51,6 +51,10 @@
     "message":"若要隐藏按钮，请右键单击Safari的工具栏并选择“自定义工具栏“，然后将AdBlock按钮拖出工具栏。若要再次显示按钮，您可以将它拖放回工具栏。",
     "description":"Message explaining how to hide the AdBlock toolbar button. 'Customize Toolbar' should match the text that Safari displays in the toolbar's context menu."
   },
+  "ff_button_how_to_hide":{
+    "message":"要隐藏按钮，请右键单击它并选择“从工具栏移除”。您可以在Firefox菜单->定制中选择重新显示按钮。",
+    "description":"Message explaining how to hide the AdBlock toolbar button. 'Remove from Toolbar' should match the text that Firefox displays when you right click a toolbar button, and 'Customize' should match the text that shows when you click the button on the Firefox toolbar with three lines."
+  },
   "sliderexplanation":{
     "message":"移动滑块直到页面上的广告被正确地屏蔽。",
     "description":"Blacklister slider page message"
@@ -980,6 +984,30 @@
   "checkinfirefox_5":{
     "message":"广告是否仍在浏览器中显示？",
     "description":"Instruction for how to check Firefox\/Chrome for a reported ad"
+  },
+  "ff_checkinchrometitle":{
+    "message":"使用Chrome查看",
+    "description":"Tell a user to see if a reported ad also appears in Chrome"
+  },
+  "ff_checkinchrome_1":{
+    "message":"如果您还没有Chrome，请先安装Chrome。",
+    "description":"Instruction for how to check Chrome for a reported ad"
+  },
+  "ff_checkinchrome_2":{
+    "message":"如果您的Chrome没有AdBlock，请为Chrome安装AdBlock扩展。",
+    "description":"Instruction for how to check Chrome for a reported ad"
+  },
+  "ff_checkinchrome_3":{
+    "message":"在Chrome中，订阅与您现在正使用的相同的过滤列表。",
+    "description":"Instruction for how to check Chrome for a reported ad"
+  },
+  "ff_checkinchrome_4":{
+    "message":"在Chrome中打开含有广告的页面。",
+    "description":"Instruction for how to check Chrome for a reported ad"
+  },
+  "ff_checkinchrome_5":{
+    "message":"该广告是否也在Chrome中出现？",
+    "description":"Instruction for how to check Chrome for a reported ad"
   },
   "refusetocheck":{
     "message":"我不想检查这个",
